feat(auth): implement pagination for user retrieval in UserController and UserService